tests/baselines/reference/parserClassDeclaration7.errors.txt
==== tests/cases/compiler/parserClassDeclaration7.ts (1 errors) ====
    declare module M {
      declare class C {
      ~~~~~~~
!!! parserClassDeclaration7.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }